deploy/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: api-deployment
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: demo
  type: NodePort
