deploy/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: demo
  labels:
    app: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: demo-ingress
    alb.ingress.kubernetes.io/subnets: subnet-02334dbeafdf59cdd, subnet-06187cefe789618cb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:468899338760:certificate/bbe526ab-8331-406b-93d4-eab29101694d
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-deployment
                port:
                  number: 80
